# goit-algo2-hw-04

./: Makefile  README.md  main.py  pyproject.toml  tempCodeRunnerFile.py
src/storage_logistics/: draw_graph.py  edmonds_karp.py  get_terminal_to_shop_flow.py
src/trie/: homework.py  trie.py  trienode.py
storage_logistics/: split_row.py
